dev: change resize target + so that we can shrink typst's html document to fit

--- a/addons/frontend/src/typst.css
+++ b/addons/frontend/src/typst.css
@@ -2,7 +2,7 @@ body {
   background-color: #fff;
 }
 
-#imageContainer {
+#typst-app {
   margin: 0;
   transform-origin: 0 0;
   background-color: #fff;
