--- a/addons/frontend/src/typst.css
+++ b/addons/frontend/src/typst.css
@@ -2,6 +2,10 @@ body {
   background-color: #fff;
 }
 
+.hidden {
+  display: none;
+}
+
 .flex-row {
   display: flex;
   flex-direction: row;
@@ -15,6 +19,16 @@ body {
 .flex-col {
   display: flex;
   flex-direction: column;
+}
+
+.disable-scrollbars::-webkit-scrollbar {
+  background: transparent; /* Chrome/Safari/Webkit */
+  width: 0px;
+}
+    
+.disable-scrollbars {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE 10+ */
 }
 
 #typst-app {
