fix: zoom in slide mode

--- a/addons/frontend/src/typst.css
+++ b/addons/frontend/src/typst.css
@@ -42,6 +42,10 @@ body {
   overflow-x: hidden;
 }
 
+.hide-scrollbar-y {
+  overflow-y: hidden;
+}
+
 .typst-text {
   pointer-events: bounding-box;
 }
