--- a/addons/frontend/src/typst.css
+++ b/addons/frontend/src/typst.css
@@ -2,7 +2,37 @@ body {
   background-color: #fff;
 }
 
+.hidden {
+  display: none;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-row-rev {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.disable-scrollbars::-webkit-scrollbar {
+  background: transparent; /* Chrome/Safari/Webkit */
+  width: 0px;
+}
+    
+.disable-scrollbars {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE 10+ */
+}
+
 #typst-app {
+  width: fit-content;
   margin: 0;
   transform-origin: 0 0;
   background-color: #fff;
@@ -10,6 +40,10 @@ body {
 
 .hide-scrollbar-x {
   overflow-x: hidden;
+}
+
+.hide-scrollbar-y {
+  overflow-y: hidden;
 }
 
 .typst-text {
