fix: pull fixes from canvas-sidebar-content branch + margin fix + condition to render partially

--- a/addons/frontend/src/styles/layout.css
+++ b/addons/frontend/src/styles/layout.css
@@ -48,6 +48,7 @@
 
 #typst-container.mode-doc #typst-container-main {
   width: calc(100% - (2 * var(--main-margin)));
+  margin: 0 calc(var(--main-margin));
 }
 
 #typst-container.mode-slide {
