--- a/addons/frontend/src/typst.css
+++ b/addons/frontend/src/typst.css
@@ -38,7 +38,7 @@ body {
   background-color: #fff;
 }
 
-.typst-preview-canvas-page-number {
+.typst-outline-title, .typst-preview-canvas-page-number {
   color: var(--typst-preview-toolbar-fg-color);
   font-family: sans-serif;
   text-align: center;
@@ -52,6 +52,47 @@ body {
   text-anchor: middle;
   /* set to alignment center */
   dominant-baseline: central;
+}
+
+.typst-outline {
+  transition: background-color 0.2s;
+}
+
+.typst-outline:hover {
+  background-color: var(--vscode-editor-selectionHighlightBackground);
+}
+
+.typst-outline.collapsed > .typst-outline {
+  display: none;
+}
+
+.typst-outline.collapsed > .typst-page {
+  display: none;
+}
+
+.typst-outline-title.level-1 {
+  font-weight: 700;
+  font-size: 0.9rem;
+}
+
+.typst-outline-title.level-2 {
+  font-weight: 600;
+  font-size: 0.8rem;
+}
+
+.typst-outline-title.level-3 {
+  font-weight: 500;
+  font-size: 0.75rem;
+}
+
+.typst-outline-title.level-4 {
+  font-weight: 400;
+  font-size: 0.7rem;
+}
+
+.typst-outline-title.level-5 {
+  font-weight: 400;
+  font-size: 0.65rem;
 }
 
 .hide-scrollbar-x {
