--- a/addons/frontend/src/typst.css
+++ b/addons/frontend/src/typst.css
@@ -72,13 +72,13 @@ body {
 
 .tsel span::-moz-selection,
 .tsel::-moz-selection {
-  color: transpaent;
+  color: transparent;
   background: #7db9dea0;
 }
 
 .tsel span::selection,
 .tsel::selection {
-  color: transpaent;
+  color: transparent;
   background: #7db9dea0;
 }
 
