--- a/addons/frontend/src/typst.css
+++ b/addons/frontend/src/typst.css
@@ -25,10 +25,10 @@ body {
   background: transparent; /* Chrome/Safari/Webkit */
   width: 0px;
 }
-    
+
 .disable-scrollbars {
   scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none;  /* IE 10+ */
+  -ms-overflow-style: none; /* IE 10+ */
 }
 
 #typst-app {
@@ -52,6 +52,7 @@ body {
 
 .tsel span,
 .tsel {
+  left: 0;
   position: fixed;
   text-align: justify;
   white-space: nowrap;
@@ -84,11 +85,13 @@ svg {
 }
 
 .image_glyph image,
-.outline_glyph path, path.outline_glyph {
+.outline_glyph path,
+path.outline_glyph {
   transform: matrix(1, 0, 0, 1, var(--o), 0);
 }
 
-.outline_glyph path, path.outline_glyph {
+.outline_glyph path,
+path.outline_glyph {
   fill: var(--glyph_fill);
 }
 
