--- a/addons/frontend/src/typst.css
+++ b/addons/frontend/src/typst.css
@@ -139,7 +139,9 @@ path.outline_glyph {
 }
 
 .typst-svg-cursor {
-  animation: 1s blink step-start infinite;
+  /* https://www.elevenforum.com/t/change-text-cursor-blink-rate-in-windows-11.12409/ */
+  /* 1.2 seconds per blink is the default value on gtk and the slowest value on windows */
+  animation: 1.2s blink step-start infinite;
 }
 
 @keyframes blink {
