feat: get dark theme for free by invert-colors option

--- a/addons/frontend/src/typst.css
+++ b/addons/frontend/src/typst.css
@@ -38,6 +38,18 @@ body {
   background-color: #fff;
 }
 
+#typst-app.invert-colors {
+  filter: invert(1);
+}
+
+#typst-app.invert-colors .typst-image {
+  filter: invert(0);
+  transition: filter 0.1s ease-in-out;
+}
+
+#typst-app.invert-colors .typst-image:hover {
+  filter: invert(1);
+}
 .hide-scrollbar-x {
   overflow-x: hidden;
 }
