--- a/addons/frontend/src/typst.css
+++ b/addons/frontend/src/typst.css
@@ -39,16 +39,16 @@ body {
 }
 
 #typst-app.invert-colors {
-  filter: invert(1);
+  filter: invert(0.95) hue-rotate(180deg);
 }
 
 #typst-app.invert-colors .typst-image {
-  filter: invert(0);
+  filter: invert(0) hue-rotate(0deg);
   transition: filter 0.1s ease-in-out;
 }
 
 #typst-app.invert-colors .typst-image:hover {
-  filter: invert(1);
+  filter: invert(0.95) hue-rotate(180deg);
 }
 .hide-scrollbar-x {
   overflow-x: hidden;
