--- a/addons/frontend/src/typst.css
+++ b/addons/frontend/src/typst.css
@@ -68,7 +68,7 @@ body {
   left: 0;
   position: fixed;
   text-align: justify;
-  white-space: nowrap;
+  white-space: pre;
   width: 100%;
   height: 100%;
   text-align-last: justify;
